# PG_PI

./: .gitignore  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  development_work.md  feature_request.md
backend/: .env  Cargo.toml  Dockerfile
backend/requests/: bruno.json
backend/requests/environments/: default.bru
backend/requests/exercise/: add_exercise.bru  exercise.bru  exercises.bru  get_exercise.bru  get_exercises.bru  get_exercises_by_user.bru
backend/requests/session/: login.bru  logout.bru  register.bru
backend/requests/user/: add_user.bru  get_user.bru  get_users.bru
backend/src/: application_state.rs  configuration.rs  main.rs  serializer.rs  session.rs  share.rs  user.rs  utility.rs
backend/src/exercise/: controller.rs  model.rs  repository.rs  routes.rs
backend/src/exercise/model/: request.rs  response.rs
backend/src/puzzle/: model.rs  routes.rs  service.rs
backend/src/puzzle/service/: authorization.rs  puzzle.rs
backend/src/session/: routes.rs
backend/src/share/: model.rs  routes.rs  service.rs
backend/src/user/: controller.rs  model.rs  models.rs  repository.rs  routes.rs  utility.rs
backend/src/user/model/: request.rs
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  proxy.conf.json  styles.css
kube-deployments/: backend-deployment.yaml  frontend-deployment.yaml  ingress-deployment.yaml  mongo-deployment.yaml
mobile/: .gitignore  analysis_options.yaml  build.yaml  flutter_launcher_icons.yaml  pubspec.yaml
scripts/: var-db.sh
(+414 files in other folders)
