[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6"
color-eyre = "0.6"
dotenvy = "0.15"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.8"
serde-aux = "4.5"
futures = "0.3"
async-trait = "0.1"
actix-session = { version = "0.10.0", features = ["redis-session"] }
itertools = "0.13.0"
