[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6"
eyre = "0.6"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.1"
serde-aux = "4.5"
mime = "0.3.17"
chrono = { version = "0.4.38", features = ["serde"] }
